tests/cargo-ui/assess-error/compilation-error/src/lib.rs
// Copyright Kani Contributors
// SPDX-License-Identifier: Apache-2.0 OR MIT
//! Check that the compilation error detection works as expected
use std::option;

pub fn add(left: usize, right: u32) -> usize {
    left + right
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn it_works() {
        let result = add(2, 2);
        assert_eq!(result, 4);
    }
}
